--- a/pubman/pubman_presentation/src/main/resources/Messages_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_de.properties
@@ -47,6 +47,8 @@ ComponentRequired = Bitte laden Sie mindestens eine Datei hoch oder geben Sie ei
 
 ComponentVisibilityNotProvided = Bei einer angeh\u00E4ngten Datei fehlt die Bestimmung der Zugangsbeschr\u00E4nkung der Datei.
 
+ConfirmRollbackItemVersion = Wollen Sie die aktuelle Version mit dieser Version ersetzen?
+
 CreatorFamilyNameNotProvided = Der Nachname des Urhebers muss noch angegeben werden.
 
 CreatorNotProvided = Es muss mindestens ein Urheber eingegeben werden.
