--- a/pubman/pubman_presentation/src/main/resources/Messages_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_en.properties
@@ -50,6 +50,8 @@ ComponentRequired = Please either upload at least one file or enter a locator.
 
 ComponentVisibilityNotProvided = An attached file is missing the specification of the file visibility.
 
+ConfirmRollbackItemVersion = Do you wish to replace the current version with this version?
+
 CreatorFamilyNameNotProvided = A creator's family name is not provided.
 
 CreatorNotProvided = At least one creator is required.
