--- a/pubman/pubman_presentation/src/main/resources/Messages_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_ja.properties
@@ -50,6 +50,8 @@ ComponentRequired = Please either upload at least one file or enter a locator.
 
 ComponentVisibilityNotProvided = An attached file is missing the specification of the file visibility.
 
+ConfirmRollbackItemVersion = Do you wish to replace the current version with this version?
+
 CreatorFamilyNameNotProvided = \u4F5C\u8005\u60C5\u5831\u306E\u3046\u3061\u59D3\u304C\u5165\u529B\u3055\u308C\u3066\u3044\u307E\u305B\u3093\u3002
 
 CreatorNotProvided = \u5C11\u306A\u304F\u3068\u30821\u540D\u5206\u306F\u4F5C\u8005\u3092\u5165\u529B\u3057\u3066\u304F\u3060\u3055\u3044\u3002
