PUBMAN-1503 - Format labelling on import workspace

--- a/pubman/pubman_presentation/src/main/resources/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_en.properties
@@ -424,6 +424,24 @@ ENUM_IDENTIFIERTYPE_URN = URN
 
 ENUM_IDENTIFIERTYPE_ZDB = ZDB
 
+ENUM_IMPORT_FORMAT_BIBTEX = BibTex
+
+ENUM_IMPORT_FORMAT_EDOC = eDoc
+
+ENUM_IMPORT_FORMAT_EDOCAEI = eDoc AEI
+
+ENUM_IMPORT_FORMAT_ENDNOTE = EndNote
+
+ENUM_IMPORT_FORMAT_ENDNOTEICE = EndNote ICE
+
+ENUM_IMPORT_FORMAT_ESCIDOC = eSciDoc
+
+ENUM_IMPORT_FORMAT_MAB = MAB
+
+ENUM_IMPORT_FORMAT_RIS = RIS
+
+ENUM_IMPORT_FORMAT_WOS = WOS
+
 ENUM_INVITATIONSTATUS_INVITED = Invited
 
 ENUM_LANGUAGE_DE = Deutsch
