ViewItemFull_lblPublishingInfo = Ort, Verlag, Ausgabe

--- a/pubman/pubman_presentation/src/main/resources/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_de.properties
@@ -1140,7 +1140,7 @@ ViewItemFull_lblNoEntry = -
 
 ViewItemFull_lblPages = Seiten
 
-ViewItemFull_lblPublishingInfo = Verlag, Ort, Ausgabe
+ViewItemFull_lblPublishingInfo = Ort, Verlag, Ausgabe
 
 ViewItemFull_lblRelation = Relation
 
