Add Japanese labels (BrowseBy).

--- a/pubman/pubman_presentation/src/main/resources/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_ja.properties
@@ -111,29 +111,29 @@ Basket_lblRemoveSelected = \u9078\u629E\u3057\u305F\u30A2\u30A4\u30C6\u30E0\u309
 #
 BreadCrumb_info = \u5C65\u6B74:
 
-BrowseByChooseInitial = Choose Initial
+BrowseByChooseInitial = \u8457\u8005\u540D\u30A4\u30CB\u30B7\u30E3\u30EB
 
-BrowseByChooseYear = Choose Year
+BrowseByChooseYear = \u520A\u884C\u5E74\u304B\u3089\u63A2\u3059
 
-BrowseByCreator = Persons
+BrowseByCreator = \u8457\u8005\u540D\u4E00\u89A7
 
-BrowseByCreatorDesc = Browse by person names and view the corresponding items.
+BrowseByCreatorDesc = \u8457\u8005\u540D\u304B\u3089\u8CC7\u6599\u3092\u63A2\u3059\u3002
 
-BrowseByInitial = Initial:
+BrowseByInitial = \u30A4\u30CB\u30B7\u30E3\u30EB:
 
-BrowseByOrg = Organizations
+BrowseByOrg = \u7D44\u7E54\u4E00\u89A7
 
-BrowseByOrgDesc = Browse by organizational unit names and view the corresponding items.
+BrowseByOrgDesc = \u7D44\u7E54\u4E00\u89A7\u304B\u3089\u8CC7\u6599\u3092\u63A2\u3059\u3002
 
-BrowseByPage = Browse
+BrowseByPage = \u4E00\u89A7\u304B\u3089\u63A2\u3059
 
-BrowseBySelect = Choose Browse By
+BrowseBySelect = \u30D6\u30E9\u30A6\u30BA\u5BFE\u8C61\u3092\u9078\u629E
 
-BrowseBySubject = Subjects
+BrowseBySubject = \u4E3B\u984C\u4E00\u89A7\u304B\u3089\u63A2\u3059
 
-BrowseByYear = Browse By Year
+BrowseByYear = \u520A\u884C\u5E74
 
-BrowseByYearDesc = Browse by year and view the corresponding items.
+BrowseByYearDesc = \u520A\u884C\u5E74\u304A\u3088\u3073\u5E74\u3054\u3068\u306B\u8CC7\u6599\u3092\u63A2\u3059\u3002
 
 #
 #CartItemsPage
@@ -172,9 +172,9 @@ DepositorWSPage = \u767B\u9332\u4E00\u89A7
 # ExportItems
 DisplayExportItemsPage = \u30A8\u30AF\u30B9\u30DD\u30FC\u30C8\u30A2\u30A4\u30C6\u30E0\u4E00\u89A7
 
-ENUM_ALTERNATIVETITLETYPE_ABBREVIATION = Abbreviation
+ENUM_ALTERNATIVETITLETYPE_ABBREVIATION = \u7701\u7565\u5F62
 
-ENUM_ALTERNATIVETITLETYPE_OTHER = Other
+ENUM_ALTERNATIVETITLETYPE_OTHER = \u305D\u306E\u4ED6
 
 ENUM_CONTENTCATEGORY_ABSTRACT = Deprecated: Abstract
 
@@ -224,7 +224,7 @@ ENUM_CREATORROLE_CONTRIBUTOR = \u5BC4\u7A3F\u8005
 
 ENUM_CREATORROLE_EDITOR = \u7DE8\u96C6\u8005
 
-ENUM_CREATORROLE_HONOREE = Honoree
+ENUM_CREATORROLE_HONOREE = \u5BC4\u8D08\u8005
 
 ENUM_CREATORROLE_ILLUSTRATOR = \u30A4\u30E9\u30B9\u30C8\u30EC\u30FC\u30BF
 
@@ -275,7 +275,7 @@ ENUM_CRITERIA_STATE = \u767B\u9332\u72B6\u6CC1
 
 ENUM_CRITERIA_TITLE = \u30BF\u30A4\u30C8\u30EB
 
-ENUM_DEGREETYPE_BACHELOR = Bachelor
+ENUM_DEGREETYPE_BACHELOR = \u5B66\u58EB\u53F7 (Bachelor)
 
 ENUM_DEGREETYPE_DIPLOMA = \u5B66\u58EB\u53F7 (Diploma)
 
@@ -297,13 +297,13 @@ ENUM_GENRE_BOOK = \u66F8\u7C4D
 
 ENUM_GENRE_BOOK_ITEM = \u66F8\u7C4D\u306E\u4E00\u90E8
 
-ENUM_GENRE_BOOK_REVIEW = Book Review
+ENUM_GENRE_BOOK_REVIEW = \u66F8\u8A55
 
-ENUM_GENRE_CASE_NOTE = Case Note
+ENUM_GENRE_CASE_NOTE = \u5224\u4F8B\u6CE8\u91C8
 
-ENUM_GENRE_CASE_STUDY = Case Study
+ENUM_GENRE_CASE_STUDY = \u5224\u4F8B\u8003\u5BDF
 
-ENUM_GENRE_COLLECTED_EDITION = Collected Edition
+ENUM_GENRE_COLLECTED_EDITION = \u8AD6\u6587\u96C6
 
 ENUM_GENRE_COMMENTARY = Commentary 
 
@@ -315,27 +315,27 @@ ENUM_GENRE_CONTRIBUTION_TO_COLLECTED_EDITION = Contribution to a Collected Editi
 
 ENUM_GENRE_CONTRIBUTION_TO_COMMENTARY = Contribution to a Commentary
 
-ENUM_GENRE_CONTRIBUTION_TO_ENCYCLOPEDIA = Contribution to an Encyclopedia
+ENUM_GENRE_CONTRIBUTION_TO_ENCYCLOPEDIA = \u767E\u79D1\u4E8B\u5178\u3078\u306E\u5BC4\u7A3F
 
 ENUM_GENRE_CONTRIBUTION_TO_FESTSCHRIFT = Contribution to a Festschrift
 
-ENUM_GENRE_CONTRIBUTION_TO_HANDBOOK = Contribution to a Handbook
+ENUM_GENRE_CONTRIBUTION_TO_HANDBOOK = \u30CF\u30F3\u30C9\u30D6\u30C3\u30AF\u3078\u306E\u5BC4\u7A3F
 
 ENUM_GENRE_COURSEWARE_LECTURE = \u6559\u6750
 
 ENUM_GENRE_EDITORIAL = Editorial
 
-ENUM_GENRE_ENCYCLOPEDIA = Encyclopedia
+ENUM_GENRE_ENCYCLOPEDIA = \u767E\u79D1\u4E8B\u5178
 
 ENUM_GENRE_FESTSCHRIFT = Festschrift
 
-ENUM_GENRE_HANDBOOK = Handbook
+ENUM_GENRE_HANDBOOK = \u30CF\u30F3\u30C9\u30D6\u30C3\u30AF
 
 ENUM_GENRE_ISSUE = \u7279\u96C6\u53F7
 
 ENUM_GENRE_JOURNAL = \u5B66\u8853\u96D1\u8A8C
 
-ENUM_GENRE_MANUAL = Manual
+ENUM_GENRE_MANUAL = \u30DE\u30CB\u30E5\u30A2\u30EB
 
 ENUM_GENRE_MANUSCRIPT = \u8349\u7A3F
 
@@ -343,9 +343,9 @@ ENUM_GENRE_MONOGRAPH = Monograph
 
 ENUM_GENRE_MULTI_VOLUME = Multi-Volume
 
-ENUM_GENRE_NEWSPAPER = Newspaper
+ENUM_GENRE_NEWSPAPER = \u65B0\u805E
 
-ENUM_GENRE_NEWSPAPER_ARTICLE = Newspaper Article
+ENUM_GENRE_NEWSPAPER_ARTICLE = \u65B0\u805E\u8A18\u4E8B
 
 ENUM_GENRE_OPINION = Opinion
 
@@ -365,11 +365,11 @@ ENUM_GENRE_TALK_AT_EVENT = \u8B1B\u6F14
 
 ENUM_GENRE_THESIS = \u5B66\u4F4D\u8AD6\u6587
 
-ENUM_GENRE_WEB_PAGE = Web Page
+ENUM_GENRE_WEB_PAGE = Web\u30DA\u30FC\u30B8
 
 ENUM_GENRE_WORKING_PAPER = Working Paper
 
-ENUM_IDENTIFIERTYPE_ = n.a.
+ENUM_IDENTIFIERTYPE_ = \u8A72\u5F53\u306A\u3057
 
 ENUM_IDENTIFIERTYPE_ARXIV = arXiv
 
@@ -485,9 +485,9 @@ ENUM_REVIEWMETHOD_PEER = \u67FB\u8AAD\u3042\u308A
 
 ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_COMPONENTS = \u30D5\u30A1\u30A4\u30EB\u6DFB\u4ED8\u3042\u308A
 
-ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_FILES = with file(s)
+ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_FILES = \u30D5\u30A1\u30A4\u30EB\u6DFB\u4ED8\u3042\u308A
 
-ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_LOCATORS = with locator(s)
+ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_LOCATORS = \u95A2\u9023URL\u3042\u308A
 
 ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_NO_COMPONENTS = \u30D5\u30A1\u30A4\u30EB\u6DFB\u4ED8\u306A\u3057
 
@@ -991,7 +991,7 @@ ViewItemFull_btnItemView = \u8A73\u7D30
 
 ViewItemFull_lblAbstract = \u8981\u65E8
 
-ViewItemFull_lblAbstractLanguage = Language of Abstract
+ViewItemFull_lblAbstractLanguage = \u8981\u65E8\u306E\u8A00\u8A9E
 
 ViewItemFull_lblAddToBasket = \u4E00\u6642\u4FDD\u5B58\u3078\u8FFD\u52A0
 
@@ -1093,7 +1093,7 @@ ViewItemFull_lblLanguages = \u8A00\u8A9E
 
 ViewItemFull_lblLastModified = \u6700\u7D42\u66F4\u65B0
 
-ViewItemFull_lblLegalCaseCourtName = Court
+ViewItemFull_lblLegalCaseCourtName = \u88C1\u5224\u6240\u540D
 
 ViewItemFull_lblLegalCaseCourtNameIdDate = Court, Date, Case Reference Nr
 
