Add Japanese labels (BrowseBy).

--- a/pubman/pubman_presentation/src/main/resources/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_ja.properties
@@ -111,9 +111,9 @@ Basket_lblRemoveSelected = \u9078\u629E\u3057\u305F\u30A2\u30A4\u30C6\u30E0\u309
 #
 BreadCrumb_info = \u5C65\u6B74:
 
-BrowseByChooseInitial = \u8457\u8005\u540D\u30A4\u30CB\u30B7\u30E3\u30EB
+BrowseByChooseInitial = \u30A4\u30CB\u30B7\u30E3\u30EB
 
-BrowseByChooseYear = \u520A\u884C\u5E74\u304B\u3089\u63A2\u3059
+BrowseByChooseYear = \u65E5\u4ED8\u304B\u3089\u63A2\u3059
 
 BrowseByCreator = \u8457\u8005\u540D\u4E00\u89A7
 
@@ -1560,7 +1560,7 @@ WithdrawItem_lnkPublication = \u30A2\u30A4\u30C6\u30E0
 
 WithdrawItem_lnkWithdraw = \u53D6\u308A\u4E0B\u3052
 
-Year = Year
+Year = \u520A\u884C\u5E74
 
 about = PubMan\u306B\u3064\u3044\u3066
 
@@ -1844,11 +1844,11 @@ contact = \u9023\u7D61\u5148
 
 creator_type = \u7A2E\u5225
 
-dateOptionAny = Any Year
+dateOptionAny = \u3059\u3079\u3066\u306E\u65E5\u4ED8
 
-dateOptionPublished = Year Published
+dateOptionPublished = \u520A\u884C\u5E74
 
-ddcDesc = Dewey Decimal Classification
+ddcDesc = \u30C7\u30E5\u30FC\u30A4\u5341\u9032\u5206\u985E\u6CD5 (Dewey Decimal Classification)
 
 #
 # DepositorWS Itemstates
@@ -2232,7 +2232,7 @@ mainMenu_lnkPolicy = \u30DD\u30EA\u30B7\u30FC/\u514D\u8CAC\u4E8B\u9805
 
 mainMenu_lnkQAWorkspace = \u7BA1\u7406\u753B\u9762
 
-mpipksDesc = MPI PKS Classification
+mpipksDesc = MPI PKS\u5206\u985E\u8868 (MPI PKS Classification)
 
 multipleImport_checkboxRollback = \u30A8\u30E9\u30FC\u6642\u306B\u51E6\u7406\u3092\u5DEE\u3057\u623B\u3059
 
