--- a/pubman/pubman_presentation/src/main/resources/Tooltip_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Tooltip_ja.properties
@@ -77,7 +77,7 @@ Breadcrumb_action = execute default action
 # Breadcrumb
 Breadcrumb_itemPage = Go to Item Page
 
-BrowseBy = Browse.
+BrowseBy = \u4E00\u89A7\u304B\u3089\u63A2\u3059\u3002
 
 CreateItemPage = \u65B0\u898F\u30A2\u30A4\u30C6\u30E0\u3092\u4F5C\u6210
 
@@ -1858,7 +1858,7 @@ login_btLogin = Login
 
 login_btLogout = Logout 
 
-mainMenu_lblBrowse = Browse
+mainMenu_lblBrowse = \u30D6\u30E9\u30A6\u30BA
 
 mainMenu_lblMy = Submission
 
@@ -1949,7 +1949,7 @@ search_lblAdvancedSearch_noresults = Advanced Search
 #
 search_lblIncludeFiles = Include files
 
-search_lblSearch = Search released items\u0009
+search_lblSearch = Search released items	
 
 search_start = \u691C\u7D22\u3092\u958B\u59CB\u3059\u308B
 
