--- a/pubman/pubman_presentation/src/main/resources/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_ja.properties
@@ -305,19 +305,19 @@ ENUM_GENRE_CASE_STUDY = \u5224\u4F8B\u8003\u5BDF
 
 ENUM_GENRE_COLLECTED_EDITION = \u8AD6\u6587\u96C6
 
-ENUM_GENRE_COMMENTARY = Commentary 
+ENUM_GENRE_COMMENTARY = \u6CD5\u4EE4\u89E3\u8AAC
 
 ENUM_GENRE_CONFERENCE_PAPER = \u4F1A\u8B70\u8AD6\u6587
 
 ENUM_GENRE_CONFERENCE_REPORT = \u4F1A\u8B70\u5831\u544A\u66F8
 
-ENUM_GENRE_CONTRIBUTION_TO_COLLECTED_EDITION = Contribution to a Collected Edition 
+ENUM_GENRE_CONTRIBUTION_TO_COLLECTED_EDITION = \u8AD6\u6587\u96C6\u3078\u306E\u5BC4\u7A3F
 
-ENUM_GENRE_CONTRIBUTION_TO_COMMENTARY = Contribution to a Commentary
+ENUM_GENRE_CONTRIBUTION_TO_COMMENTARY = \u6CD5\u4EE4\u89E3\u8AAC\u3078\u306E\u5BC4\u7A3F
 
 ENUM_GENRE_CONTRIBUTION_TO_ENCYCLOPEDIA = \u767E\u79D1\u4E8B\u5178\u3078\u306E\u5BC4\u7A3F
 
-ENUM_GENRE_CONTRIBUTION_TO_FESTSCHRIFT = Contribution to a Festschrift
+ENUM_GENRE_CONTRIBUTION_TO_FESTSCHRIFT = \u8A18\u5FF5\u8AD6\u6587\u96C6\u3078\u306E\u5BC4\u7A3F
 
 ENUM_GENRE_CONTRIBUTION_TO_HANDBOOK = \u30CF\u30F3\u30C9\u30D6\u30C3\u30AF\u3078\u306E\u5BC4\u7A3F
 
@@ -327,7 +327,7 @@ ENUM_GENRE_EDITORIAL = Editorial
 
 ENUM_GENRE_ENCYCLOPEDIA = \u767E\u79D1\u4E8B\u5178
 
-ENUM_GENRE_FESTSCHRIFT = Festschrift
+ENUM_GENRE_FESTSCHRIFT = \u8A18\u5FF5\u8AD6\u6587\u96C6
 
 ENUM_GENRE_HANDBOOK = \u30CF\u30F3\u30C9\u30D6\u30C3\u30AF
 
@@ -339,7 +339,7 @@ ENUM_GENRE_MANUAL = \u30DE\u30CB\u30E5\u30A2\u30EB
 
 ENUM_GENRE_MANUSCRIPT = \u8349\u7A3F
 
-ENUM_GENRE_MONOGRAPH = Monograph
+ENUM_GENRE_MONOGRAPH = \u30E2\u30CE\u30B0\u30E9\u30D5
 
 ENUM_GENRE_MULTI_VOLUME = Multi-Volume
 
@@ -367,7 +367,7 @@ ENUM_GENRE_THESIS = \u5B66\u4F4D\u8AD6\u6587
 
 ENUM_GENRE_WEB_PAGE = Web\u30DA\u30FC\u30B8
 
-ENUM_GENRE_WORKING_PAPER = Working Paper
+ENUM_GENRE_WORKING_PAPER = \u30EF\u30FC\u30AD\u30F3\u30B0\u30DA\u30FC\u30D1\u30FC
 
 ENUM_IDENTIFIERTYPE_ = \u8A72\u5F53\u306A\u3057
 
@@ -405,7 +405,7 @@ ENUM_IDENTIFIERTYPE_URN = URN
 
 ENUM_IDENTIFIERTYPE_ZDB = ZDB
 
-ENUM_IMPORT_FORMAT_BIBTEX = BibTex
+ENUM_IMPORT_FORMAT_BIBTEX = BibTeX
 
 ENUM_IMPORT_FORMAT_EDOC = eDoc
 
@@ -748,11 +748,11 @@ Export_ExportFormat_JUS = JUS
 
 Export_ExportFormat_XML = xml
 
-Export_FileFormat_ESCIDOC_SNIPPET = \u53C2\u7167\u5F62\u5F0F\u4ED8\u304DXML 
+Export_FileFormat_ESCIDOC_SNIPPET = \u5F15\u7528\u5F62\u5F0F\u4ED8\u304DXML 
 
-Export_FileFormat_HTML_PLAIN = html (plain)
+Export_FileFormat_HTML_PLAIN = html (\u30B7\u30F3\u30D7\u30EB)
 
-Export_FileFormat_HTML_STYLED = html (formatted)
+Export_FileFormat_HTML_STYLED = html (\u88C5\u98FE\u4ED8)
 
 Export_FileFormat_ODT = odt
 
@@ -788,9 +788,9 @@ Home_Header_News = \u958B\u767A\u30C1\u30FC\u30E0\u304B\u3089\u306E\u304A\u77E5\
 
 Home_Header_News_Disabled = \u304A\u77E5\u3089\u305B\u8868\u793A\u306F\u3053\u306E\u30B5\u30FC\u30D0\u3067\u306F\u7121\u52B9\u8A2D\u5B9A\u3055\u308C\u3066\u3044\u307E\u3059\u3002
 
-Home_Link_EasySub = Easy Submission
+Home_Link_EasySub = \u7C21\u6613\u767B\u9332
 
-Home_Link_FullSub = Full Submission
+Home_Link_FullSub = \u8A73\u7D30\u767B\u9332
 
 #
 # HomePage
