--- a/pubman/pubman_presentation/src/main/resources/Messages_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_de.properties
@@ -209,7 +209,7 @@ depositorWS_SuccessfullyDeleted = Der Datensatz wurde gel\u00F6scht.
 
 depositorWS_SuccessfullyReleased = Der Datensatz wurde freigegeben.
 
-depositorWS_SuccessfullyRevised = Der Datensatz wurde zur \u00DCeberarbeitung zur\u00FCckgesendet.
+depositorWS_SuccessfullyRevised = Der Datensatz wurde zur \u00DCberarbeitung zur\u00FCckgesendet.
 
 depositorWS_SuccessfullySaved = Der Datensatz wurde gespeichert.
 
