--- a/pubman/pubman_presentation/src/main/resources/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_de.properties
@@ -804,7 +804,7 @@ Home_Header_Current = Aktuelle Funktionalit\u00E4ten
 
 Home_Header_LastItems = K\u00FCrzlich freigegebene Datens\u00E4tze
 
-Home_Header_LastItems_Disabled = Keine Produktionsumgebung daher Feed deaktiviert
+Home_Header_LastItems_Disabled = Keine Produktivumgebung daher Feed deaktiviert
 
 Home_Header_News = Aktuelles von PubMan
 
