--- a/pubman/pubman_presentation/src/main/resources/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_de.properties
@@ -2235,7 +2235,7 @@ login_btLogin = Einloggen
 
 login_btLogout = Ausloggen 
 
-mainMenu_lblBrowse = Navigieren
+mainMenu_lblBrowse = Browse
 
 mainMenu_lblCart = ABLAGE
 
