Handbook added in advanced search

--- a/pubman/pubman_presentation/src/main/resources/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_de.properties
@@ -1728,6 +1728,8 @@ adv_search_lblChkGenre_editorial = Editorial
 
 adv_search_lblChkGenre_festschrift = Festschrift
 
+adv_search_lblChkGenre_handbook = Handbuch
+
 adv_search_lblChkGenre_issue = Sonderheft
 
 adv_search_lblChkGenre_journal = Zeitschrift
