--- a/pubman/pubman_presentation/src/main/resources/Tooltip_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Tooltip_ja.properties
@@ -1472,6 +1472,8 @@ adv_search_lblChkGenre_editorial = Editorial
 
 adv_search_lblChkGenre_festschrift = Festschrift
 
+adv_search_lblChkGenre_handbook = Handbook
+
 adv_search_lblChkGenre_issue = Special Journal Issue
 
 adv_search_lblChkGenre_journal = Journal
