--- a/pubman/pubman_presentation/src/main/resources/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_ja.properties
@@ -1703,6 +1703,8 @@ adv_search_lblChkGenre_editorial = Editorial
 
 adv_search_lblChkGenre_festschrift = Festschrift
 
+adv_search_lblChkGenre_handbook = Handbook
+
 adv_search_lblChkGenre_issue = \u7279\u96C6\u53F7
 
 adv_search_lblChkGenre_journal = \u8AD6\u6587\u8A8C
