Add Japanese labels.

--- a/pubman/pubman_presentation/src/main/resources/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_ja.properties
@@ -561,9 +561,9 @@ EditItem_btUpload = \u30A2\u30C3\u30D7\u30ED\u30FC\u30C9
 
 EditItem_btUploadLocator = \u30D5\u30A1\u30A4\u30EB\u3068\u3057\u3066\u30A2\u30C3\u30D7\u30ED\u30FC\u30C9
 
-EditItem_btUpload_File = Upload File
+EditItem_btUpload_File = \u30D5\u30A1\u30A4\u30EB\u3092\u30A2\u30C3\u30D7\u30ED\u30FC\u30C9
 
-EditItem_btUpload_URL = Upload from URL
+EditItem_btUpload_URL = URL\u304B\u3089\u76F4\u63A5\u30A2\u30C3\u30D7\u30ED\u30FC\u30C9
 
 EditItem_btnAddAuthors = \u8457\u8005\u60C5\u5831\u3092\u8FFD\u52A0\u3059\u308B
 
@@ -581,7 +581,7 @@ EditItem_lblAlternativeTitel = \u5225\u30BF\u30A4\u30C8\u30EB
 
 EditItem_lblBasic = \u57FA\u672C\u60C5\u5831
 
-EditItem_lblClassifiedSubject = Classified Subject
+EditItem_lblClassifiedSubject = \u4E3B\u984C\u5206\u985E
 
 EditItem_lblCollection = \u30B3\u30EC\u30AF\u30B7\u30E7\u30F3
 
@@ -635,7 +635,7 @@ EditItem_lblFileEmbargo = \u516C\u958B\u7336\u4E88\u671F\u9650
 
 EditItem_lblFileProperties = \u30D5\u30A1\u30A4\u30EB\u5C5E\u6027
 
-EditItem_lblFileURL = File URL
+EditItem_lblFileURL = \u767B\u9332\u30D5\u30A1\u30A4\u30EB\u306EURL
 
 EditItem_lblGenre = \u8CC7\u6599\u7A2E\u5225
 
@@ -703,7 +703,7 @@ EditItem_lnkSave = \u4FDD\u5B58
 
 EditItem_lnkSaveAndSubmit = \u767B\u9332
 
-EditItem_lnkSaveURL = Save URL
+EditItem_lnkSaveURL = URL\u3068\u3057\u3066\u767B\u9332
 
 EditItem_lnkValidate = \u5165\u529B\u5185\u5BB9\u30C1\u30A7\u30C3\u30AF
 
@@ -937,7 +937,7 @@ SearchResultList_lblSortedBy = \u30BD\u30FC\u30C8\u6761\u4EF6:
 
 Search_lblShowHide = \u8868\u793A\u30FB\u7701\u7565
 
-ShowQuery = Show Query
+ShowQuery = \u691C\u7D22\u6761\u4EF6\u3092\u8868\u793A\u3059\u308B
 
 #
 # Submission
@@ -1093,13 +1093,13 @@ ViewItemFull_lblLastModified = \u6700\u7D42\u66F4\u65B0
 
 ViewItemFull_lblLegalCaseCourtName = \u88C1\u5224\u6240\u540D
 
-ViewItemFull_lblLegalCaseCourtNameIdDate = Court, Date, Case Reference Nr
+ViewItemFull_lblLegalCaseCourtNameIdDate = \u88C1\u5224\u6240\u540D, \u65E5\u4ED8, \u88C1\u5224\u756A\u53F7
 
-ViewItemFull_lblLegalCaseDatePublished = Date
+ViewItemFull_lblLegalCaseDatePublished = \u5224\u4F8B\u65E5\u4ED8
 
-ViewItemFull_lblLegalCaseIdentifier = Aktenzeichen
+ViewItemFull_lblLegalCaseIdentifier = \u88C1\u5224\u756A\u53F7\u53C2\u7167 (Aktenzeichen)
 
-ViewItemFull_lblLegalCaseTitle = Title
+ViewItemFull_lblLegalCaseTitle = \u88C1\u5224\u540D
 
 ViewItemFull_lblLinkSection = \u30A2\u30A4\u30C6\u30E0\u8A73\u7D30
 
@@ -1657,15 +1657,15 @@ adv_search_lbHeaderWoP = \u691C\u7D22\u8A9E\u53E5
 #Genre
 adv_search_lblChkGenre = \u8CC7\u6599\u7A2E\u5225
 
-adv_search_lblChkGenre_abb_casenote = Case Note
+adv_search_lblChkGenre_abb_casenote = \u5224\u4F8B\u6CE8\u91C8
 
-adv_search_lblChkGenre_abb_contrcolled = Contr. to Collect...
+adv_search_lblChkGenre_abb_contrcolled = \u8AD6\u6587\u96C6\u3078\u306E\u5BC4\u7A3F
 
-adv_search_lblChkGenre_abb_contrcommentary = Contr. to Comment...
+adv_search_lblChkGenre_abb_contrcommentary = \u6CD5\u4EE4\u89E3\u8AAC\u3078\u306E\u5BC4\u7A3F
 
-adv_search_lblChkGenre_abb_contrfestschrift = Contr. to Fest...
+adv_search_lblChkGenre_abb_contrfestschrift = \u8A18\u5FF5\u8AD6\u6587\u96C6\u3078\u306E\u5BC4\u7A3F
 
-adv_search_lblChkGenre_abb_contrlexikon = Contr. to Encycl...
+adv_search_lblChkGenre_abb_contrlexikon = \u767E\u79D1\u4E8B\u5178\u3078\u306E\u5BC4\u7A3F
 
 adv_search_lblChkGenre_article = \u5B66\u8853\u8AD6\u6587
 
@@ -1673,35 +1673,35 @@ adv_search_lblChkGenre_book = \u66F8\u7C4D
 
 adv_search_lblChkGenre_bookitem = \u66F8\u7C4D\u306E\u4E00\u90E8
 
-adv_search_lblChkGenre_bookreview = Book Review
+adv_search_lblChkGenre_bookreview = \u66F8\u8A55
 
-adv_search_lblChkGenre_casenote = Case Note
+adv_search_lblChkGenre_casenote = \u5224\u4F8B\u6CE8\u91C8
 
-adv_search_lblChkGenre_casestudy = Case Study
+adv_search_lblChkGenre_casestudy = \u5224\u4F8B\u8003\u5BDF
 
-adv_search_lblChkGenre_colled = Collected Edition
+adv_search_lblChkGenre_colled = \u8AD6\u6587\u96C6
 
-adv_search_lblChkGenre_commentary = Commentary
+adv_search_lblChkGenre_commentary = \u6CD5\u4EE4\u89E3\u8AAC
 
 adv_search_lblChkGenre_conferencepap = \u4F1A\u8B70\u8AD6\u6587
 
 adv_search_lblChkGenre_conferencerep = \u4F1A\u8B70\u5831\u544A
 
-adv_search_lblChkGenre_contrcolled = Contribution to a Collected Edition 
+adv_search_lblChkGenre_contrcolled = \u8AD6\u6587\u96C6\u3078\u306E\u5BC4\u7A3F 
 
-adv_search_lblChkGenre_contrcommentary = Contribution to a Commentary 
+adv_search_lblChkGenre_contrcommentary = \u6CD5\u4EE4\u89E3\u8AAC\u3078\u306E\u5BC4\u7A3F 
 
-adv_search_lblChkGenre_contrfestschrift = Contribution to a Festschrift
+adv_search_lblChkGenre_contrfestschrift = \u8A18\u5FF5\u8AD6\u6587\u96C6\u3078\u306E\u5BC4\u7A3F
 
-adv_search_lblChkGenre_contrhandbook = Contribution to a Handbook 
+adv_search_lblChkGenre_contrhandbook = \u30CF\u30F3\u30C9\u30D6\u30C3\u30AF\u3078\u306E\u5BC4\u7A3F 
 
-adv_search_lblChkGenre_contrlexikon = Contribution to an Encyclopedia 
+adv_search_lblChkGenre_contrlexikon = \u767E\u79D1\u4E8B\u5178\u3078\u306E\u5BC4\u7A3F 
 
 adv_search_lblChkGenre_courseware = \u6559\u6750
 
 adv_search_lblChkGenre_editorial = Editorial
 
-adv_search_lblChkGenre_festschrift = Festschrift
+adv_search_lblChkGenre_festschrift = \u8A18\u5FF5\u8AD6\u6587\u96C6
 
 adv_search_lblChkGenre_handbook = Handbook
 
@@ -1711,9 +1711,9 @@ adv_search_lblChkGenre_journal = \u8AD6\u6587\u8A8C
 
 adv_search_lblChkGenre_manuscript = \u8349\u7A3F
 
-adv_search_lblChkGenre_monogaph = Monograph
+adv_search_lblChkGenre_monogaph = \u30E2\u30CE\u30B0\u30E9\u30D5
 
-adv_search_lblChkGenre_newspaperarticle = Newspaper Article
+adv_search_lblChkGenre_newspaperarticle = \u65B0\u805E\u8A18\u4E8B
 
 adv_search_lblChkGenre_opinion = Opinion
 
@@ -2162,9 +2162,9 @@ item_review-method = \u67FB\u8AAD\u7A2E\u5225
 
 item_subject = \u30AD\u30FC\u30EF\u30FC\u30C9
 
-item_subject_type = Type
+item_subject_type = \u5206\u985E\u7A2E\u5225
 
-item_subject_value = Value
+item_subject_value = \u5206\u985E\u30B3\u30FC\u30C9
 
 item_table-of-contents = \u76EE\u6B21
 
@@ -2270,7 +2270,7 @@ openSearch_desc = \u6587\u732E\u60C5\u5831\u3092\u691C\u7D22:
 
 openSearch_shortDesc = eSciDoc PubMan
 
-organizationNumbers = Org.nr.
+organizationNumbers = \u6240\u5C5E\u756A\u53F7
 
 organization_name = \u6240\u5C5E\u7D44\u7E54\u304A\u3088\u3073\u4F4F\u6240
 
