Add Japanese labels.

--- a/pubman/pubman_presentation/src/main/resources/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_ja.properties
@@ -1127,9 +1127,9 @@ ViewItemFull_lblRemoveFromBasket = \u4E00\u6642\u4FDD\u5B58\u304B\u3089\u524A\u9
 
 ViewItemFull_lblRevisionMethod = \u67FB\u8AAD
 
-ViewItemFull_lblRollback = Rollback to this version
+ViewItemFull_lblRollback = \u3053\u306E\u7248\u306B\u623B\u3059
 
-ViewItemFull_lblRollbackConfirm = Do you really want to replace the existing data with this version?
+ViewItemFull_lblRollbackConfirm = \u73FE\u5728\u306E\u6700\u65B0\u30C7\u30FC\u30BF\u3092\u3053\u306E\u7248\u306E\u60C5\u5831\u3067\u7F6E\u304D\u63DB\u3048\u3066\u826F\u3044\u3067\u3059\u304B?
 
 ViewItemFull_lblShowGroup = \u8868\u793A:
 
@@ -1306,7 +1306,7 @@ ViewItemMedium_lblSubHeaderFile = \u30D5\u30A1\u30A4\u30EB
 
 ViewItemMedium_lblSubHeaderSource = \u51FA\u7248\u7269
 
-ViewItemPage = \u8A73\u7D30
+ViewItemPage = \u30A2\u30A4\u30C6\u30E0\u8A73\u7D30
 
 ViewItemReleaseHistoryPage = \u516C\u958B\u5C65\u6B74
 
@@ -1870,7 +1870,7 @@ easy_submission_btnBack = \u623B\u308B
 
 easy_submission_btnCancel = \u30AD\u30E3\u30F3\u30BB\u30EB
 
-easy_submission_btnFetch = Fetch
+easy_submission_btnFetch = \u53D6\u5F97
 
 easy_submission_btnImport = \u30A4\u30F3\u30DD\u30FC\u30C8\u3059\u308B
 
@@ -1888,7 +1888,7 @@ easy_submission_btnRemoveFile = \u524A\u9664
 
 easy_submission_btnSave = \u767B\u9332
 
-easy_submission_btnUpload = Upload
+easy_submission_btnUpload = \u30A2\u30C3\u30D7\u30ED\u30FC\u30C9
 
 easy_submission_btnUploadFile = \u30D5\u30A1\u30A4\u30EB\u3092\u30A2\u30C3\u30D7\u30ED\u30FC\u30C9\u3059\u308B
 
@@ -2103,7 +2103,7 @@ import_workspace_delete_items = \u30A2\u30A4\u30C6\u30E0\u3092\u3059\u3079\u3066
 
 import_workspace_details = \u8A73\u7D30
 
-import_workspace_detailsView = View details
+import_workspace_detailsView = \u8A73\u7D30
 
 import_workspace_enddate = \u7D42\u4E86
 
@@ -2174,7 +2174,7 @@ item_title_alternative = \u305D\u306E\u4ED6\u306E\u30BF\u30A4\u30C8\u30EB\uFF08\
 
 item_total-number-of-pages = \u7DCF\u30DA\u30FC\u30B8\u6570
 
-lblSubject = Subject
+lblSubject = \u4E3B\u984C
 
 lbl_noEntry = -
 
@@ -2328,9 +2328,9 @@ source_end-page = \u7D42\u4E86\u30DA\u30FC\u30B8
 
 source_genre = \u51FA\u7248\u7269\u306E\u7A2E\u5225
 
-source_identifier_type = Type of identifier
+source_identifier_type = \u8B58\u5225\u5B50
 
-source_identifier_value = Identifier value
+source_identifier_value = \u5024
 
 source_issue = \u53F7
 
@@ -2421,7 +2421,7 @@ userID = \u30E6\u30FC\u30B6\u540D
 
 userPW = \u30D1\u30B9\u30EF\u30FC\u30C9
 
-viewItemFullPage = View item
+viewItemFullPage = \u8A73\u7D30\u8868\u793A
 
 warning_lblMessageHeader = \u30B7\u30B9\u30C6\u30E0\u30E1\u30C3\u30BB\u30FC\u30B8 / \u8B66\u544A:
 
