--- a/pubman/pubman_presentation/src/main/resources/Messages_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_de.properties
@@ -71,6 +71,12 @@ EndPageNotProvided = Endseite angeben.
 
 EnglishAbstractNotProvided = Ein Abstract in Englisch muss eingegeben werden.
 
+EntryIsNotANumber = Die Organisationsnummer bei einem Ersteller ist kein g\u00FCltiger Wert: "$1"
+
+EntryIsNotInValidRange = Die Organisationsnummer bei einem Ersteller ist nicht im g\u00FCltigen Bereich: "$1"
+
+ErrorInOrganizationAssignment = Es trat ein unerwarteter Fehler beim Auslesen der Organisationsnummern auf: "$1"
+
 ErrorParsingCreatorString = Der angegebene Text ist leer oder konnte nicht erkannt werden
 
 EventNotProvided = Wenn das Genre "Konferenzband", "Konferenzbeitrag", "Vortrag", "Konferenzbericht" oder "Lehrmaterial" ist, so muss eine Veranstaltung/Konferenz angegeben werden.
