--- a/pubman/pubman_presentation/src/main/resources/Messages_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_en.properties
@@ -74,6 +74,12 @@ EndPageNotProvided = End Page requiered.
 
 EnglishAbstractNotProvided = An abstract in "English" has to be provided.
 
+EntryIsNotANumber = The affiliation number of a creator is not valid: "$1"
+
+EntryIsNotInValidRange = The affiliation number of a creator is in the valid range: "$1"
+
+ErrorInOrganizationAssignment = An unexpected error occured while assigning affiliations to creators: "$1"
+
 ErrorParsingCreatorString = The given creator string is empty or couldn't be parsed correctly.
 
 EventNotProvided = If genre is equal to "Proceedings", "Proceedings Paper", "Talk at event", "Conference Report" or "Teaching", an event has to be provided.
