--- a/pubman/pubman_presentation/src/main/resources/Messages_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_ja.properties
@@ -70,6 +70,12 @@ EndDateWithoutStartDate = \u30A4\u30D9\u30F3\u30C8\u7D42\u4E86\u65E5\u3092\u5165
 
 EnglishAbstractNotProvided = An abstract in "English" has to be provided.
 
+EntryIsNotANumber = The affiliation number of a creator is not valid: "$1"
+
+EntryIsNotInValidRange = The affiliation number of a creator is in the valid range: "$1"
+
+ErrorInOrganizationAssignment = An unexpected error occured while assigning affiliations to creators: "$1"
+
 ErrorParsingCreatorString = The given creator string is empty or couldn't be parsed correctly.
 
 EventNotProvided = \u4F1A\u8B70\u8AD6\u6587\u3001\u4F1A\u8B70\u8AD6\u6587\u96C6\u3001\u8B1B\u6F14\u3001\u4F1A\u8B70\u5831\u544A\u66F8\u3001\u6559\u6750\u306E\u8CC7\u6599\u7A2E\u5225\u306E\u5834\u5408\u3001\u30A4\u30D9\u30F3\u30C8\u60C5\u5831\u3092\u5165\u529B\u3059\u308B\u5FC5\u8981\u304C\u3042\u308A\u307E\u3059\u3002
