--- a/pubman/pubman_presentation/src/main/resources/Tooltip_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Tooltip_de.properties
@@ -105,7 +105,7 @@ DepositorWSPage = Meine Datens\u00E4tze
 # ExportItems
 DisplayExportItemsPage = Liste der exportierten Datens\u00E4tze
 
-ENUM_CONTENTCATEGORY_ABSTRACT = Abstract
+ENUM_CONTENTCATEGORY_ABSTRACT = Zusammenfassung
 
 ENUM_CONTENTCATEGORY_ANY_FULLTEXT = beliebiger Volltext
 
@@ -356,7 +356,7 @@ EditItem_FilePreview = Vorschau
 #
 EditItem_NO_ITEM_SET = -
 
-EditItem_addAbstract = Abstract hinzuf\u00FCgen
+EditItem_addAbstract = Zusammenfassung hinzuf\u00FCgen
 
 EditItem_addAltTitle = Alternativen Titel hinzuf\u00FCgen
 
@@ -414,7 +414,7 @@ EditItem_btnMultipleAuthors = Mehrere Autoren anzeigen
 
 EditItem_desc = Beschreibung
 
-EditItem_lblAbstract = Abstract
+EditItem_lblAbstract = Zusammenfassung
 
 EditItem_lblAddCreator = Urheber (Personen/Organisationen) hinzuf\u00FCgen
 
@@ -579,7 +579,7 @@ EditItem_lnkSaveAndSubmit = Einstellen
 
 EditItem_lnkValidate = Validierung
 
-EditItem_removeAbstract = Abstract entfernen
+EditItem_removeAbstract = Zusammenfassung entfernen
 
 EditItem_removeAltTitle = Alternativen Titel entfernen
 
@@ -831,7 +831,7 @@ ViewItemFull_btnItemStatistics = Statistiken
 
 ViewItemFull_btnItemVersions = Freigabegeschichte
 
-ViewItemFull_lblAbstract = Abstract
+ViewItemFull_lblAbstract = Zusammenfassung
 
 ViewItemFull_lblAffiliations = Affiliations
 
@@ -1196,7 +1196,7 @@ ViewItem_btnNextItem1 = > n\u00E4chster Datensatz
 
 ViewItem_btnPreviousItem1 = < voriger Datensatz
 
-ViewItem_lblAbstract1 = Abstract:
+ViewItem_lblAbstract1 = Zusammenfassung:
 
 ViewItem_lblAffiliatedOrganization1 = zugeh\u00F6rige Organisation:
 
@@ -1657,7 +1657,7 @@ easy_submission_btnSave = Speichern
 
 easy_submission_btnUploadFile = Datei hochladen
 
-easy_submission_lblAbstract = Abstract
+easy_submission_lblAbstract = Zusammenfassung
 
 easy_submission_lblBibtexPath = Pfad
 
