--- a/pubman/pubman_presentation/src/main/resources/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_de.properties
@@ -352,7 +352,6 @@ ENUM_GENRE_MANUAL = Leitfaden
 
 ENUM_GENRE_MANUSCRIPT = Manuskript
 
-
 #
 # Jus-specific Source genres
 #
@@ -597,6 +596,8 @@ EditItem_btnSelectCCLicenseApply = \u00FCbernehmen
 EditItem_lblAbstract = Zusammenfassung
 
 EditItem_lblAddCreator = Urheber (Personen/Organisationen) hinzuf\u00FCgen
+
+EditItem_lblAddRemove = hinzuf\u00FCgen/entfernen
 
 EditItem_lblAlternativeTitel = Alternativer Titel
 
