--- a/pubman/pubman_presentation/src/main/resources/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_en.properties
@@ -596,6 +596,8 @@ EditItem_lblAbstract = Abstract
 
 EditItem_lblAddCreator = Add Creator Persons/Organizations
 
+EditItem_lblAddRemove = add/remove
+
 EditItem_lblAlternativeTitel = Alternative title
 
 EditItem_lblBasic = Basic
