--- a/pubman/pubman_presentation/src/main/resources/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_ja.properties
@@ -577,6 +577,8 @@ EditItem_lblAbstract = \u8981\u65E8
 
 EditItem_lblAddCreator = \u4F5C\u8005\u3001\u6240\u5C5E\u60C5\u5831\u3092\u8FFD\u52A0\u3059\u308B
 
+EditItem_lblAddRemove = add/remove
+
 EditItem_lblAlternativeTitel = \u5225\u30BF\u30A4\u30C8\u30EB
 
 EditItem_lblBasic = \u57FA\u672C\u60C5\u5831
