Add Japanese labels.

--- a/pubman/pubman_presentation/src/main/resources/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_ja.properties
@@ -1826,8 +1826,6 @@ affiliation_detail_phone = \u96FB\u8A71\u756A\u53F7
 
 all = \u5168\u3066\u3092\u9078\u629E
 
-asy_submission_lblCollectionOfImportedItem1 = This item will be imported to the
-
 cancel = \u30AD\u30E3\u30F3\u30BB\u30EB
 
 component_content-category = \u5185\u5BB9\u7A2E\u5225
@@ -2344,9 +2342,9 @@ source_title = \u51FA\u7248\u7269\u306E\u30BF\u30A4\u30C8\u30EB
 
 source_title_alternative = \u5225\u30BF\u30A4\u30C8\u30EB
 
-source_title_alternative_type = Type
+source_title_alternative_type = \u7A2E\u985E
 
-source_title_alternative_value = Title
+source_title_alternative_value = \u30BF\u30A4\u30C8\u30EB
 
 source_volume = \u5DFB
 
