--- a/pubman/pubman_presentation/src/main/resources/Messages_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_ja.properties
@@ -66,7 +66,11 @@ DateModifiedNotProvided = 2007-01-01\u4EE5\u964D\u306E\u300C\u4FEE\u6B63\u300D\u
 
 DateNotProvided = \u300C\u7279\u96C6\u53F7\u300D\u300C\u96D1\u8A8C\u300D\u300C\u8349\u7A3F\u300D\u300C\u305D\u306E\u4ED6\u300D\u4EE5\u5916\u306E\u8CC7\u6599\u7A2E\u5225\u3067\u306F\u3001\u65E5\u4ED8\u60C5\u5831\u3092\u52A0\u3048\u308B\u5FC5\u8981\u304C\u3042\u308A\u307E\u3059\u3002
 
+DegreeThesisRequiered = Degree Type required. 
+
 EndDateWithoutStartDate = \u30A4\u30D9\u30F3\u30C8\u7D42\u4E86\u65E5\u3092\u5165\u529B\u3057\u305F\u5834\u5408\u3001\u958B\u59CB\u65E5\u3082\u5165\u529B\u3059\u308B\u5FC5\u8981\u304C\u3042\u308A\u307E\u3059\u3002
+
+EndPageNotProvided = End Page requiered.
 
 EnglishAbstractNotProvided = An abstract in "English" has to be provided.
 
@@ -107,6 +111,8 @@ MimeTypeNotValid = \u6307\u5B9A\u3057\u305FMIME\u30BF\u30A4\u30D7\u306F\u8A31\u5
 
 MpdlCreatorRequired = \u5C11\u306A\u304F\u3068\u3082\u8457\u8005\u306E\u3046\u30611\u540D\u306FMPDL\u306E\u6240\u5C5E\u3068\u306A\u3063\u3066\u3044\u308B\u5FC5\u8981\u304C\u3042\u308A\u307E\u3059\u3002
 
+NoConeJournal = No CONE Journal. 
+
 NoPublicFileProvided = \u5C11\u306A\u304F\u3068\u30821\u3064\u4EE5\u4E0A\u306E\u516C\u958B\u30D5\u30A1\u30A4\u30EB\u3092\u30A2\u30C3\u30D7\u30ED\u30FC\u30C9\u3059\u308B\u5FC5\u8981\u304C\u3042\u308A\u307E\u3059\u3002
 
 NumberOfPagesAssumed = Number of pages is assumed.
@@ -116,6 +122,8 @@ OrganizationNameNotProvided = \u7D44\u7E54\u60C5\u5831\u304C\u5165\u529B\u3055\u
 OrganizationalMetadataNotProvided = \u8457\u8005\u306E\u3046\u3061\u5C11\u306A\u304F\u3068\u30821\u540D\u306B\u306F\u6240\u5C5E\u7D44\u7E54\u60C5\u5831\u3092\u52A0\u3048\u308B\u5FC5\u8981\u304C\u3042\u308A\u307E\u3059\u3002
 
 PublisherNameNotProvided = \u51FA\u7248\u8005\u60C5\u5831\u304C\u5165\u529B\u3057\u305F\u5834\u5408\u3001\u51FA\u7248\u8005\u540D\u3082\u5165\u529B\u3059\u308B\u5FC5\u8981\u304C\u3042\u308A\u307E\u3059\u3002
+
+PublisherNameSourceNotProvided = Publishing information was entered without a publisher in the source. 
 
 ReviewMethodInternalNotProvided = \u67FB\u8AAD\u7A2E\u5225\u3092\u300C\u5185\u90E8\u5BE9\u67FB\u300D\u306B\u3059\u308B\u5FC5\u8981\u304C\u3042\u308A\u307E\u3059\u3002
 
@@ -130,6 +138,12 @@ SourceGenreNotProvided = \u51FA\u7248\u7269\u540D\u3092\u5165\u529B\u3057\u305F\
 SourceNotProvided = \u300C\u5B66\u8853\u96D1\u8A8C\u300D\u300C\u66F8\u7C4D\u300D\u300C\u4F1A\u8B70\u8AD6\u6587\u300D\u306E\u8CC7\u6599\u7A2E\u5225\u3067\u306F\u3001\u51FA\u7248\u7269\u60C5\u5831\u3092\u52A0\u3048\u308B\u5FC5\u8981\u304C\u3042\u308A\u307E\u3059\u3002
 
 SourceTitleNotProvided = \u51FA\u7248\u7269\u540D\uFF08\u63B2\u8F09\u8A8C\u540D\u7B49\uFF09\u304C\u5165\u529B\u3055\u308C\u3066\u3044\u307E\u305B\u3093\u3002
+
+StartPageArticleRequiered = Start Page and End Page has to be provided for Journal Article. 
+
+StartPageLowerEqualEndPage = End Page has to greater or equal to Start Page.
+
+StartPageNotProvided = Start Page required.  
 
 StatisticsUpdatedDaily = \ \u6CE8\u610F: \u5229\u7528\u7D71\u8A08\u30C7\u30FC\u30BF\u306F\u4E00\u65E5\u306B\u4E00\u56DE\u3060\u3051\u66F4\u65B0\u3055\u308C\u307E\u3059\u3002
 
