Add Japanese labels.

--- a/pubman/pubman_presentation/src/main/resources/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_ja.properties
@@ -2246,7 +2246,7 @@ multipleImport_dont_import_anything = \u6587\u732E\u60C5\u5831\u306E\u91CD\u8907
 
 multipleImport_dont_import_duplicates = \u6587\u732E\u60C5\u5831\u306E\u91CD\u8907\u304C\u3042\u3063\u305F\u5834\u5408\u306B\u306F\u8A72\u5F53\u6587\u732E\u3092\u767B\u9332\u305B\u305A\u306B\u51E6\u7406\u3092\u9032\u3081\u308B
 
-multipleImport_getMultipleRecords = multipleImport_getMultipleRecords
+multipleImport_getMultipleRecords = \u4E00\u62EC\u767B\u9332
 
 multipleImport_importFormat = \u30A4\u30F3\u30DD\u30FC\u30C8\u5F62\u5F0F
 
