--- a/pubman/pubman_presentation/src/main/resources/Messages_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_ja.properties
@@ -30,7 +30,7 @@
 
 AffiliationDetailPage_detailsNotRetrieved = \u7D44\u7E54\u60C5\u5831\u306E\u8A73\u7D30\u8AAC\u660E\u306F\u73FE\u5728\u3042\u308A\u307E\u305B\u3093\u3002
 
-Affiliations_reloaded = ... \uFFFD\uFFFD\uFFFD\u815F\uFFFD\uFFFD\u7B5D\uFFFD\u0397\uFFFD\uFFFD\u2503\u7D4E\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\u7C8B\u662D\uFFFD\u5E25\uFFFD\uFFFD\u969C\uFFFD\uFFFD\uFFFD\uFFFD
+Affiliations_reloaded = ... \u7D44\u7E54\u56F3\u60C5\u5831\u3092\u518D\u8AAD\u307F\u8FBC\u307F\u3057\u307E\u3057\u305F\u3002
 
 AuthorNotProvided = \u8457\u8005\u306E\u7A2E\u5225\u3092\u5165\u529B\u3059\u308B\u5FC5\u8981\u304C\u3042\u308A\u307E\u3059\u3002
 
@@ -92,11 +92,11 @@ GenreNotSuitable = \u9078\u629E\u4E2D\u306E\u30B3\u30EC\u30AF\u30B7\u30E7\u30F3\
 
 IdTypeNotProvided = An identifier is missing the type.
 
-IncorrectClassification = The entered keyword does not conform to the given classification.
+IncorrectClassification = \u5206\u985E\u4F53\u7CFB\uFF08\u4E3B\u984C\uFF09\u306B\u5165\u529B\u3055\u308C\u305F\u30AD\u30FC\u30EF\u30FC\u30C9\u306E\u66F8\u5F0F\u304C\u6B63\u3057\u304F\u3042\u308A\u307E\u305B\u3093\u3002
 
-IncorrectDDCClassification = The entered keyword does not conform to the DDC classification. 
+IncorrectDDCClassification = \u30C7\u30E5\u30FC\u30A4\u5341\u9032\u5206\u985E\uFF08DDC\uFF09\u306B\u5B58\u5728\u3057\u306A\u3044\u30AD\u30FC\u30EF\u30FC\u30C9\u304C\u5165\u529B\u3055\u308C\u3066\u3044\u307E\u3059\u3002
 
-IncorrectMPIPKSClassification = The entered keyword does not conform to the MPI PKS classification. 
+IncorrectMPIPKSClassification = \u30C7\u30E5\u30FC\u30A4\u5341\u9032\u5206\u985E\uFF08DDC\uFF09\u306B\u5B58\u5728\u3057\u306A\u3044\u30AD\u30FC\u30EF\u30FC\u30C9\u304C\u5165\u529B\u3055\u308C\u3066\u3044\u307E\u3059\u3002
 
 LocatorIsNoUri = \u6307\u5B9A\u3057\u305F\u5916\u90E8URL\u306E\u6B63\u3057\u3044\u5F62\u5F0F\u3068\u306A\u3063\u3066\u3044\u307E\u305B\u3093\u3002
 
