Bugfix: PUBMAN-1621 - Edit Item: Message to validate the range of OU is misleading

--- a/pubman/pubman_presentation/src/main/resources/Messages_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_en.properties
@@ -76,7 +76,7 @@ EnglishAbstractNotProvided = An abstract in "English" has to be provided.
 
 EntryIsNotANumber = The affiliation number of a creator is not valid: "$1"
 
-EntryIsNotInValidRange = The affiliation number of a creator is in the valid range: "$1"
+EntryIsNotInValidRange = The affiliation number of a creator is not in the valid range: "$1"
 
 ErrorInOrganizationAssignment = An unexpected error occured while assigning affiliations to creators: "$1"
 
