Improvement - PUBMAN-1639 Browse by Year: labels for "Year published" and "Any year" are confusing

--- a/pubman/pubman_presentation/src/main/resources/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_de.properties
@@ -1868,9 +1868,9 @@ contact = Kontakt
 
 creator_type = Typ
 
-dateOptionAny = Irgendein Jahr
+dateOptionAny = Irgendein Jahr (eingestellt, ge\u00E4ndert, etc.)
 
-dateOptionPublished = Erscheinungsjahr
+dateOptionPublished = Nur das Erscheinungsjahr
 
 ddcDesc = Dewey-Dezimalklassifikation
 
