--- a/pubman/pubman_presentation/src/main/resources/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_en.properties
@@ -1867,9 +1867,9 @@ contact = Contact us
 
 creator_type = Type
 
-dateOptionAny = Any Year
+dateOptionAny = Any date (published in print, submitted, etc.)
 
-dateOptionPublished = Year Published
+dateOptionPublished = The date of publication only 
 
 ddcDesc = Dewey Decimal Classification
 
