Add Japanese Labels.

--- a/pubman/pubman_presentation/src/main/resources/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_ja.properties
@@ -577,7 +577,7 @@ EditItem_lblAbstract = \u8981\u65E8
 
 EditItem_lblAddCreator = \u4F5C\u8005\u3001\u6240\u5C5E\u60C5\u5831\u3092\u8FFD\u52A0\u3059\u308B
 
-EditItem_lblAddRemove = add/remove
+EditItem_lblAddRemove = \u8FFD\u52A0/\u524A\u9664
 
 EditItem_lblAlternativeTitel = \u5225\u30BF\u30A4\u30C8\u30EB
 
@@ -1705,7 +1705,7 @@ adv_search_lblChkGenre_editorial = Editorial
 
 adv_search_lblChkGenre_festschrift = \u8A18\u5FF5\u8AD6\u6587\u96C6
 
-adv_search_lblChkGenre_handbook = Handbook
+adv_search_lblChkGenre_handbook = \u30CF\u30F3\u30C9\u30D6\u30C3\u30AF
 
 adv_search_lblChkGenre_issue = \u7279\u96C6\u53F7
 
