Added Default and Test citation styles

--- a/pubman/pubman_presentation/src/main/resources/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_en.properties
@@ -768,6 +768,10 @@ Export_ExportFormat_ESCIDOC_XML = eSciDoc XML
 # JUS - Export-Format
 Export_ExportFormat_JUS = JUS
 
+# Test citation styles
+Export_ExportFormat_DEFAULT = DEFAULT
+Export_ExportFormat_TEST = TEST
+
 Export_ExportFormat_XML = xml
 
 Export_FileFormat_ESCIDOC_SNIPPET = eSciDoc Snippet
