--- a/pubman/pubman_presentation/src/main/resources/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_ja.properties
@@ -740,6 +740,7 @@ Export_ExportFormat_AJP = AJP
 
 Export_ExportFormat_APA = APA
 
+
 Export_ExportFormat_BIBTEX = BibTeX
 
 Export_ExportFormat_ENDNOTE = EndNote (UTF-8)
@@ -747,6 +748,10 @@ Export_ExportFormat_ENDNOTE = EndNote (UTF-8)
 Export_ExportFormat_ESCIDOC_XML = eSciDoc XML
 
 Export_ExportFormat_JUS = JUS
+
+# Test citation styles
+Export_ExportFormat_DEFAULT = DEFAULT
+Export_ExportFormat_TEST = TEST
 
 Export_ExportFormat_XML = xml
 
