--- a/pubman/pubman_presentation/src/main/resources/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_de.properties
@@ -762,6 +762,9 @@ Export_ExportFormat_APA = APA
 
 Export_ExportFormat_BIBTEX = BibTeX
 
+# Test citation styles
+Export_ExportFormat_DEFAULT = DEFAULT
+
 Export_ExportFormat_ENDNOTE = EndNote (UTF-8)
 
 Export_ExportFormat_ESCIDOC_XML = eSciDoc XML
@@ -769,10 +772,7 @@ Export_ExportFormat_ESCIDOC_XML = eSciDoc XML
 # JUS - Export-Format
 Export_ExportFormat_JUS = JUS
 
-# Test citation styles
-Export_ExportFormat_DEFAULT = DEFAULT
 Export_ExportFormat_TEST = TEST
-
 
 Export_ExportFormat_XML = xml
 
@@ -2325,6 +2325,8 @@ publishing-info_publisher = Verlag
 qaws_lblCollectionSelection = Collection
 
 qaws_lblItemStateSelection = Status des Datensatzes
+
+qaws_lblLoading = l\u00E4dt
 
 qaws_lblMultipleImportTags = Import Name
 
