--- a/pubman/pubman_presentation/src/main/resources/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_ja.properties
@@ -740,8 +740,10 @@ Export_ExportFormat_AJP = AJP
 
 Export_ExportFormat_APA = APA
 
-
 Export_ExportFormat_BIBTEX = BibTeX
+
+# Test citation styles
+Export_ExportFormat_DEFAULT = DEFAULT
 
 Export_ExportFormat_ENDNOTE = EndNote (UTF-8)
 
@@ -749,8 +751,6 @@ Export_ExportFormat_ESCIDOC_XML = eSciDoc XML
 
 Export_ExportFormat_JUS = JUS
 
-# Test citation styles
-Export_ExportFormat_DEFAULT = DEFAULT
 Export_ExportFormat_TEST = TEST
 
 Export_ExportFormat_XML = xml
@@ -2292,6 +2292,8 @@ publishing-info_publisher = \u51FA\u7248\u793E
 qaws_lblCollectionSelection = \u30B3\u30EC\u30AF\u30B7\u30E7\u30F3
 
 qaws_lblItemStateSelection = \u767B\u9332\u72B6\u6CC1
+
+qaws_lblLoading = loading
 
 qaws_lblMultipleImportTags = \u4E00\u62EC\u767B\u9332\u540D
 
