--- a/pubman/pubman_presentation/src/main/resources/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_en.properties
@@ -761,6 +761,9 @@ Export_ExportFormat_APA = APA
 
 Export_ExportFormat_BIBTEX = BibTeX
 
+# Test citation styles
+Export_ExportFormat_DEFAULT = DEFAULT
+
 Export_ExportFormat_ENDNOTE = EndNote (UTF-8)
 
 Export_ExportFormat_ESCIDOC_XML = eSciDoc XML
@@ -768,8 +771,6 @@ Export_ExportFormat_ESCIDOC_XML = eSciDoc XML
 # JUS - Export-Format
 Export_ExportFormat_JUS = JUS
 
-# Test citation styles
-Export_ExportFormat_DEFAULT = DEFAULT
 Export_ExportFormat_TEST = TEST
 
 Export_ExportFormat_XML = xml
@@ -2326,6 +2327,8 @@ publishing-info_publisher = Publisher
 qaws_lblCollectionSelection = Collection
 
 qaws_lblItemStateSelection = Item State
+
+qaws_lblLoading = loading
 
 qaws_lblMultipleImportTags = Import Name
 
