+ citation output format html_linked
Former-commit-id: f12891f9a94e9b06f81af08b9c3b1ed9a7530c31

--- a/pubman/pubman_presentation/src/main/resources/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_de.properties
@@ -780,6 +780,8 @@ Export_FileFormat_ESCIDOC_SNIPPET = eSciDoc Snippet
 
 Export_FileFormat_HTML_PLAIN = html (unformatiert)
 
+Export_FileFormat_HTML_LINKED = html (verlinkt)
+
 Export_FileFormat_HTML_STYLED = html (formatiert)
 
 Export_FileFormat_ODT = odt
