--- a/pubman/pubman_presentation/src/main/resources/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_en.properties
@@ -779,6 +779,8 @@ Export_FileFormat_ESCIDOC_SNIPPET = eSciDoc Snippet
 
 Export_FileFormat_HTML_PLAIN = html (plain)
 
+Export_FileFormat_HTML_LINKED = html (linked)
+
 Export_FileFormat_HTML_STYLED = html (formatted)
 
 Export_FileFormat_ODT = odt
