--- a/pubman/pubman_presentation/src/main/resources/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_ja.properties
@@ -759,6 +759,8 @@ Export_FileFormat_ESCIDOC_SNIPPET = \u5F15\u7528\u5F62\u5F0F\u4ED8\u304DXML
 
 Export_FileFormat_HTML_PLAIN = html (\u30B7\u30F3\u30D7\u30EB)
 
+Export_FileFormat_HTML_LINKED = html (linked)
+
 Export_FileFormat_HTML_STYLED = html (\u88C5\u98FE\u4ED8)
 
 Export_FileFormat_ODT = odt
